# claude-my-network-engineer

./: .env.example  .git-leak-allowlist  .git-leak-blocklist.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: code-reviewer.md  security-reviewer.md  test-runner.md  unifi-expert.md
.githooks/: pre-commit
.github/workflows/: leak-gate.yml
config/: ai_runtime_config.yaml  alert_thresholds.yaml  identification_tips.yaml  oui_common.yaml  permission_model.yaml  upgrade_catalog.yaml
config/probes/: 01_origin.yaml  02_building.yaml  03_isp.yaml  04_household.yaml  05_work.yaml  06_devices.yaml  07_security.yaml  08_usage.yaml  09_infrastructure.yaml  10_preferences.yaml  11_future.yaml
data/corpus/: manifest.json
data/corpus/authored/: amber-001-port-forward-http-https.md  amber-004-iot-on-trusted-vlan.md  foundation-001-home-vs-corporate.md  red-001-open-wifi-primary-ssid.md  red-002-default-admin-credentials.md  red-005-ssh-telnet-wan-exposed.md  red-014-port-forward-databases.md  red-020-wep-encryption.md  red-030-firewall-disabled.md
docs/: REVIEWER_PROMPT.md  agent_architecture.md  architecture.md  build-plan.md  corpus_curation.md  handoff_envelope_design.md  leak_detector.md  learnings.md
docs/research/: prior-art.md
docs/review_compliance/: 1.1.md  1.2.md  1.3.md  1.4.md  1.6.md  _index.md
examples/: README.md  client_register.example.yaml  device_register.example.yaml  dismissals.example.yaml  household_profile.example.yaml  network_profile.example.json  origin_stories.example.yaml
scripts/: install_pre_push_hook.sh  snapshot_index.py
src/network_engineer/: __init__.py  cli.py
src/network_engineer/agents/: __init__.py  ai_runtime.py  auditor.py  conductor.py  conductor_llm.py  conductor_prompt.py  conductor_tools.py  monitor.py  onboarding_agent.py  optimizer.py  orchestrator.py  registry_agent.py  reporter.py  security_agent.py  upgrade_agent.py
src/network_engineer/server/: __init__.py
src/network_engineer/tools/: __init__.py  agent_loop.py  approval_gate.py  authorization.py  baseline.py  conductor_debug.py  conductor_io.py  config_diff.py  corpus.py  dismissals.py  durable_memory.py  envelope.py  leak_detector.py  leak_detector_cli.py  leak_detector_hook.py  logging_setup.py  monitor.py  optimizer.py  origin_stories.py  permissions.py  probes.py  (+8 more)
tests/: conftest.py  test_agent_loop.py  test_ai_runtime.py  test_approval_gate.py  test_auditor.py  test_authorization.py  test_conductor.py  test_conductor_io.py  test_corpus.py  test_dismissals.py  test_durable_memory.py  test_envelope.py  test_example_macs.py  test_leak_detector.py  test_monitor.py  test_optimizer.py  test_permission_model.py  test_probes.py  test_prompt_safety.py  test_registry.py  test_reporter.py  test_security_agent.py  test_smoke.py  test_ssl_policy.py  test_ui_server.py  test_unifi_client.py  test_upgrade_agent.py  test_web_adapter.py
(+6 files in other folders)
